minor alignment fixing

--- a/css/style.css
+++ b/css/style.css
@@ -55,17 +55,6 @@ a:hover{
     transition: .8s;
 } */
 
-section{
-    background-color: #ffff;
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    align-items: center; 
-    justify-content: center;
-    flex-direction: column;
-    scroll-snap-align: center;
-}
-
 #home{
     background-image: url("../assets/imgs/bg/bg13.jpg");
     background-size: cover;
@@ -74,7 +63,7 @@ section{
 }
 #homeDiv{
     width: 20rem;
-    margin: 2rem 0 0 -57rem;
+    margin: 2rem 0 0 3.7rem;
 }
 #home #homeDiv h1 {    
     font-size: 4rem;
@@ -84,7 +73,7 @@ section{
 
 #home #text{
     width: 35rem;
-    margin: -24rem -40rem 0 0;
+    margin: 5rem 0 0 23rem;
 }
 
 
@@ -101,5 +90,40 @@ section{
     text-shadow: rgb(25, 29, 32) 1px 1px;
 }
 
+section{
+    background-color: #ffff;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center; 
+    scroll-snap-align: center;
+}
 
+section .titleAndImage{
+    margin: 0 0 0 3.7rem;
 
+}
+
+section .titleAndImage .contentTitle{
+    font-size: 3rem;
+    margin: 0 0 3rem 0;
+}
+
+section .titleAndImage .contentImg{
+    width: 40rem;
+    border: 2px solid rgb(139, 139, 141);
+}
+
+section .contentP{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    width: 35rem;
+    margin: 0 0 0 2rem;
+}
+
+section .contentP p{
+    text-align: center;
+    font-size: 1.5rem;
+}
